some work done.

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <header class="header">
-      <div class="link container">
-        <a href="/">Memberships</a>
+      <div class="link-container">
+        <a href="/" class="selected">Memberships</a>
         <a href="user-Manage.html">Users</a>
       </div>
     </header>
-    <main class="conatainer">
+    <main class="container">
       <section class="hero">
         <div class="hero-title-container">
           <div class="hero-title">
@@ -25,10 +25,13 @@
               deactivating packages assigned to active users.
             </p>
           </div>
-          <button class="mem-button">+ New Memebership</button>
+          <div class="mem-button-container">
+            <button class="mem-button">+ New Memebership</button>
+          </div>
         </div>
-        <div class="service-card-container"></div>
+        <div class="service-cards-container"></div>
       </section>
+      <footer class="footer">Copyright 2021 Membership Manager</footer>
     </main>
   </body>
 </html>
