--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,39 @@
   </head>
   <body>
     <header class="header">
-      <div class="link container">
-        <a href="/">Memberships</a>
-        <a href="user-Manage.html">Users</a>
+      <div class="container">
+        <nav class="main-nav">
+          <a href="/" class="nav-link active">Memberships</a>
+          <a href="user-Manage.html" class="nav-link">Users</a>
+        </nav>
       </div>
     </header>
-    <main class="conatainer">
-      <section class="hero">
-        <div class="hero-title-container">
-          <div class="hero-title">
-            <h2>Memebership Management</h2>
-            <p>
-              Here you can manage your membership packages. Note: Make sure you are not deleting or
-              deactivating packages assigned to active users.
-            </p>
-          </div>
-          <button class="mem-button">+ New Memebership</button>
+    <main class="membership-main">
+      <div class="container grid">
+        <div class="title-block">
+          <h2>Memebership Management</h2>
+          <p class="lead">
+            Here you can manage your membership packages. Note: Make sure you are not deleting or
+            deactivating packages assigned to active users.
+          </p>
         </div>
-        <div class="service-card-container"></div>
-      </section>
+        <button class="btn btn-add">+ New membership</button>
+        <div class="cards-container">
+          <article class="card">
+            <h3>Price Title</h3>
+            <p>Description</p>
+            <hr />
+            <button class="btn btn-delete">delete</button>
+          </article>
+
+          <article class="card">
+            <h3>Price Title</h3>
+            <p>Description</p>
+            <hr />
+            <button class="btn btn-delete">delete</button>
+          </article>
+        </div>
+      </div>
     </main>
   </body>
 </html>
