index css done.

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,15 @@
             deactivating packages assigned to active users.
           </p>
         </div>
-        <button class="btn btn-add">+ New membership</button>
+        <button class="btn btn-add">New membership</button>
         <div class="cards-container">
+          <article class="card">
+            <h3>Price Title</h3>
+            <p>Description</p>
+            <hr />
+            <button class="btn btn-delete">delete</button>
+          </article>
+
           <article class="card">
             <h3>Price Title</h3>
             <p>Description</p>
