--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/services.js" defer></script>
+    <script type="module" src="./js/services.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -28,26 +28,7 @@
         </div>
         <button class="btn btn-add">New membership</button>
         <div class="cards-container">
-          <article class="card">
-            <h3>Price Title</h3>
-            <p>Description</p>
-            <hr />
-            <button class="btn btn-delete">delete</button>
-          </article>
-
-          <article class="card">
-            <h3>Price Title</h3>
-            <p>Description</p>
-            <hr />
-            <button class="btn btn-delete">delete</button>
-          </article>
-
-          <article class="card">
-            <h3>Price Title</h3>
-            <p>Description</p>
-            <hr />
-            <button class="btn btn-delete">delete</button>
-          </article>
+          <h2>Loading...</h2>
         </div>
       </div>
     </main>
