--- a/public/add-service.html
+++ b/public/add-service.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <script type="module" src="./js/services.js" defer></script>
   </head>
   <body>
     <header class="header">
       <div class="container">
         <nav class="main-nav">
-          <a href="/" class="nav-link active">Memberships</a>
-          <a href="add-service.html" class="nav-link">Users</a>
+          <a href="index.html" class="nav-link">Memberships</a>
+          <a href="add-service.html" class="nav-link active">Users</a>
         </nav>
       </div>
     </header>
     <main class="membership-main">
       <div class="container grid">
         <div class="title-block">
-          <h2>Memebership Management</h2>
-          <p class="lead">
-            Here you can manage your membership packages. Note: Make sure you are not deleting or
-            deactivating packages assigned to active users.
-          </p>
+          <h2>Add service</h2>
         </div>
         <button class="btn btn-add">New membership</button>
-        <div class="cards-container">
-          <h2>Loading...</h2>
+        <div class="add-container">
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Name" />
+          <label for="price">Price</label>
+          <input type="number" min="0" , step="0.01" id="price" />
+          <label for="description">Description</label>
+          <textarea id="description" cols="30" rows="3"></textarea>
         </div>
       </div>
     </main>
