--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <nav class="main-nav">
           <a href="/" class="nav-link active">Memberships</a>
-          <a href="add-service.html" class="nav-link">Users</a>
+          <a href="users.html" class="nav-link">Users</a>
         </nav>
       </div>
     </header>
